REST error codes
Added tests of error codes for the policy agent REST API,
and fixed problems found.
Updated swagger generated API spec.
Fixed so that the HttpStatus is propagated back in Dmaap responses
also for successful cases.

This commit resolves NONRTRIC-155 and NONRTRIC-156

Issue-ID: NONRTRIC-155
