# policy-agent/src/main/java/org/oransc/policyagent/controllers/ServiceController.java
@@ -67,9 +67,15 @@ public class ServiceController {
     @GetMapping("/services")
     @ApiOperation(value = "Returns service information")
     @ApiResponses(
-        value = {@ApiResponse(code = 200, message = "OK", response = ServiceStatus.class, responseContainer = "List")})
+        value = { //
+            @ApiResponse(code = 200, message = "OK", response = ServiceStatus.class, responseContainer = "List"), //
+            @ApiResponse(code = 404, message = "Service type is not found", response = String.class)})
     public ResponseEntity<String> getServices(//
         @RequestParam(name = "name", required = false) String name) {
+
+        if (name != null && this.services.get(name) == null) {
+            return new ResponseEntity<>("Service not found", HttpStatus.NOT_FOUND);
+        }
 
         Collection<ServiceStatus> servicesStatus = new ArrayList<>();
         synchronized (this.services) {
@@ -89,7 +95,10 @@ public class ServiceController {
     }
 
     @ApiOperation(value = "Register a service")
-    @ApiResponses(value = {@ApiResponse(code = 200, message = "OK", response = String.class)})
+    @ApiResponses(
+        value = { //
+            @ApiResponse(code = 200, message = "OK", response = String.class),
+            @ApiResponse(code = 400, message = "Cannot parse the bode as a service", response = String.class)})
     @PutMapping("/service")
     public ResponseEntity<String> putService(//
         @RequestBody ServiceRegistrationInfo registrationInfo) {
@@ -97,12 +106,15 @@ public class ServiceController {
             this.services.put(toService(registrationInfo));
             return new ResponseEntity<>("OK", HttpStatus.OK);
         } catch (Exception e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.NO_CONTENT);
+            return new ResponseEntity<>(e.getMessage(), HttpStatus.BAD_REQUEST);
         }
     }
 
     @ApiOperation(value = "Delete a service")
-    @ApiResponses(value = {@ApiResponse(code = 200, message = "OK")})
+    @ApiResponses(
+        value = { //
+            @ApiResponse(code = 204, message = "OK"),
+            @ApiResponse(code = 404, message = "Service not found", response = String.class)})
     @DeleteMapping("/services")
     public ResponseEntity<String> deleteService(//
         @RequestParam(name = "name", required = true) String serviceName) {
@@ -113,13 +125,14 @@ public class ServiceController {
             removePolicies(service);
             return new ResponseEntity<>("OK", HttpStatus.NO_CONTENT);
         } catch (Exception e) {
-            return new ResponseEntity<>(e.getMessage(), HttpStatus.NO_CONTENT);
+            return new ResponseEntity<>(e.getMessage(), HttpStatus.NOT_FOUND);
         }
     }
 
-    @ApiOperation(value = "Keep the poilicies alive for a service")
+    @ApiOperation(value = "Keep the policies alive for a service")
     @ApiResponses(
-        value = {@ApiResponse(code = 200, message = "Policies timeout supervision refreshed"),
+        value = { //
+            @ApiResponse(code = 200, message = "Policies timeout supervision refreshed"),
             @ApiResponse(code = 404, message = "The service is not found, needs re-registration")})
     @PostMapping("/services/keepalive")
     public ResponseEntity<String> keepAliveService(//
